sumo/tests/jtrrouter/errors/network/edge/lane/root__edge__lane#maxspeed__ungiven21/errors.jtrrouter
Error: Attribute 'maxspeed' is missing in definition of lane '2_0'.
Quitting (on error).
